# my-da-mon

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  configure.scan
examples/: example.conf  example.css
src/: Main.cpp  MyDAMon.cpp  MyDAMon.h
src/rpahu/dockapps/apps/: MyDAMon.cpp  MyDAMon.h
src/rpahu/dockapps/monitors/: Group.cpp  Group.h  Monitor.cpp  Monitor.h  TimeMon.cpp  TimeMon.h
src/rpahu/dockapps/widgets/: Label.cpp  Label.h  Widget.cpp  Widget.h
src/rpahu/utils/: Base.cpp  Base.h
